# yo

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Makefile  license  main.yo  readme.md  stdlib_gen.py
docs/: .gitignore  404.html  Gemfile  Makefile  _config.yml  ideas.md  index.md  io.md  progress.md  readme.md  reference.md  spec.md  syntax.txt  todo.md
docs/_includes/: footer.html  head.html  header.html
docs/_layouts/: default.html  markdown.html
docs/_plugins/: yo_syntax.rb
docs/docs/: index.md
docs/static/: highlighting.css  main.css  spec-sections.js
lib/lex/: CMakeLists.txt  Diagnostics.cpp  Diagnostics.h  Lexer.cpp  Lexer.h  SourceLocation.h  Token.h  TokenKind.cpp  TokenKind.h
lib/parse/: AST.cpp  AST.h  ASTVisitor.cpp  ASTVisitor.h  Attributes.cpp  Attributes.h  CMakeLists.txt  Parser.cpp  Parser.h  StdlibResolution.cpp  TypeDesc.cpp  TypeDesc.h
lib/util/: CMakeLists.txt  Counter.h  Format.h  MapUtils.h  NamedScope.h  OptionSet.h  VectorUtils.h  llvm_casting.h  util.cpp  util.h
lib/yo/: AST.cpp  AST.h  ASTRewriter.cpp  ASTRewriter.h  ASTVisitor.cpp  ASTVisitor.h  Attributes.cpp  Attributes.h  CMakeLists.txt  Diagnostics.cpp  Diagnostics.h  Driver.cpp  Driver.h  IRGen+Decl.cpp  IRGen+Expr.cpp  IRGen+Stmt.cpp  IRGen.cpp  IRGen.h  Lexer.cpp  Lexer.h  Mangling.cpp  Mangling.h  MatchMaker.cpp  MatchMaker.h  NameLookup.cpp  NameLookup.h  NamedScope.h  Parser.cpp  Parser.h  SemA.cpp  SemA.h  StdlibResolution.cpp  TemplateSpecialization.cpp  TemplateSpecialization.h  Token.cpp  Token.h  Type.cpp  Type.h  TypeDesc.h  util.cpp  (+2 more)
src/: AST.cpp  AST.h  Annotations.h  Attributes.cpp  Attributes.h  CharacterSet.cpp  CharacterSet.h  CommandLine.cpp  CommandLine.h  Diagnostics.cpp  Diagnostics.h  Driver.cpp  Driver.h  IRGen.cpp  IRGen.h  JIT.cpp  JIT.h  Lexer.cpp  Lexer.h  Mangling.cpp  Mangling.h  NamedScope.h  Parser.cpp  Parser.h  Pygmentize.cpp  Pygmentize.h  Scope.cpp  Scope.h  StdlibResolution.cpp  StdlibResolution.h  TemplateResolution.cpp  TemplateResolution.h  TemplateSpecialization.cpp  TemplateSpecialization.h  Token.cpp  Token.h  Type.cpp  Type.h  TypeCache.cpp  TypeCache.h  (+11 more)
stdlib/: io.yo
stdlib/C/: stdio.yo  stdlib.yo  string.yo
stdlib/ffi/: main.yo
stdlib/io/: main.yo
stdlib/math/: main.yo
stdlib/runtime/: casts.yo  core.yo  intrinsics.yo  main.yo  memory.yo  metatypes.yo  object.yo  operators.yo  refcounting.yo  utils.yo
stdlib/std/: array.yo  core.yo  hashmap.yo  intrinsics.yo  iterable.yo  math.yo  memory.yo  number.yo  object.yo  operators.yo  range.yo  runtime.yo  string.yo  string_builder.yo
test/: CMakeLists.txt  mangling.cpp  mangling_input.txt  test.cpp  test.py  test.swift
test/src/: binop.yo  functionCall.yo  functionReturnType.yo  primitiveReturnValue.yo
test/tests/: _test_utils.yo  arithmetics.yo  exit-code.yo
tools/: docs  stdlib_gen.py  x
tools/godbolt/: languages.js.patch  readme.md  setup
tools/other/: x
tools/yo-cli/: CMakeLists.txt  main.cpp
tools/yo-demangle/: CMakeLists.txt  main.cpp
tools/yo-lang-vscode/: README.md  package.json
yo/: AssociatedObject.swift  CLI+Flags.swift  CLI.swift  Enum+NameInitializable.swift  LKUtilities.h  LKUtilities.m  Log.swift  Profiling.swift  Unsafe.swift  extensions.swift  main.swift  yo-Bridging-Header.h  yo.swift
yo.xcodeproj/: project.pbxproj
yo/AST/: ASTAnnotation.swift  ASTArbitraryNodes.swift  ASTArrayGetter.swift  ASTArrayLiteral.swift  ASTArraySetter.swift  ASTAssignment.swift  ASTBinaryOperation.swift  ASTBooleanLiteral.swift  ASTBoxedExpression.swift  ASTBreakStatement.swift  ASTComposite.swift  ASTCondition.swift  ASTConditionalStatement.swift  ASTConstantDeclaration.swift  ASTContinueStatement.swift  ASTDeferStatement.swift  ASTEnumDeclaration.swift  ASTForLoop.swift  ASTFormatter.swift  ASTFunctionCall.swift  ASTFunctionDeclaration.swift  ASTFunctionSignature.swift  ASTIdentifier.swift  ASTIfStatement.swift  ASTImportStatement.swift  ASTInlineBooleanExpression.swift  ASTLambda.swift  ASTMemberAccess.swift  ASTNode.swift  ASTNoop.swift  ASTNumberLiteral.swift  ASTPointerOperation.swift  ASTProtocolDeclaration.swift  ASTRangeLiteral.swift  ASTRawOperation.swift  ASTReturnStatement.swift  ASTSpreadExpression.swift  ASTStaticMemberGetter.swift  ASTStaticVariableDeclaration.swift  ASTStringLiteral.swift  (+14 more)
yo/Bytecode Compiler/: ARCAnalyzer.swift  BytecodeCompiler.swift  ImportPathResolver.swift  Instruction+Debug.swift  Instruction.swift  Scope.swift  SymbolMangling.swift  TypeCache.swift  WIPInstruction.swift
yo/Bytecode Interpreter/: BytecodeInterpreter.swift  Heap.swift  NativeFunction.swift  StackView.swift
yo/BytecodeCompiler/: ARCAnalyzer.swift  AutoSynthesizedCodeGen.swift  BuiltinIdentifiers.swift  BytecodeCompiler.swift  CodeGen+Globals.swift  FunctionSignature.swift  ImportPathResolver.swift  Instruction.swift  Optimizer.swift  Scope.swift  SemanticAnalyzer.swift  ShortCircuitEvaluation.swift  SymbolMangling.swift  TypeCache.swift  WIPInstruction.swift
yo/BytecodeInterpreter/: Buffer.swift  BytecodeInterpreter.swift  CallLogger.swift  CallStatRecorder.swift  Constants.swift  Heap.swift  NativeFunction.swift  NativeFunctions+FFI.swift  NativeFunctions+IO.swift  NativeFunctions.swift  Runtime.swift  Stack.swift
yo/Compiler/: AutoSynthesizedCodeGen.swift  BuiltinIdentifiers.swift  BytecodeCompiler.swift  CodeGen+Globals.swift  FunctionSignature.swift  Instruction+Debug.swift  Instruction.swift  Optimizer.swift  Scope.swift  SemanticAnalyzer.swift  SymbolMangling.swift  TypeCache.swift  UnresolvedInstruction.swift  WIPInstruction.swift  WIPInstructionFormatter.swift
yo/Interpreter/: ARC.swift  Buffer.swift  BytecodeInterpreter.swift  Constants.swift  CountedSet.swift  Heap.swift  NativeFunction.swift  NativeFunctions+FFI.swift  NativeFunctions+IO.swift  NativeFunctions+MemoryManagement.swift  NativeFunctions.swift  Runtime.swift  Stack.swift  StackView.swift
yo/Lexer/: Lexer.swift  Token.swift  Tokenizer.swift
yo/Optimizer/: Optimizer+Binop.swift  Optimizer.swift
yo/Parser/: ASTAssignment.swift  ASTBinop.swift  (+19 more)
(+19 files in other folders)
